[package]
name = "market-api"
version = "0.1.0"
authors = ["STBoyden <sam@stboyden.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1"
dotenv = "0.15"
env_logger = "0.7"
listenfd = "0.3"
log = "0.4"
serde = "1"
serde_json = "1"
sqlx = { version =  "0.4", features = ["runtime-actix-native-tls", "postgres"] }
