[package]
name = "market-api"
version = "2.0.0"
authors = ["STBoyden <sam@stboyden.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.7"
listenfd = "0.3"
log = "0.4"
serde = "1"
serde_json = "1"
